force-app/main/default/objects/Commercial_Terms_Update__c/Commercial_Terms_Update__c.object-meta.xml
<CustomObject>
    <label>Commercial Terms Update</label>
    <nameField>
        <label>Commercial Terms Update Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Terms Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>