force-app/main/default/objects/Commercial_Terms_Update__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Terms Update</relationshipLabel>
    <relationshipName>Commercial_Terms_Update</relationshipName>
    <type>Lookup</type>
</CustomField>