force-app/main/default/objects/Commercial_Terms_Update__c/fields/Latest_Attainable_TTV__c.field-meta.xml
<CustomField>
    <fullName>Latest_Attainable_TTV__c</fullName>
    <label>Latest Attainable TTV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>