force-app/main/default/objects/Commercial_Terms_Update__c/fields/Latest_Terms__c.field-meta.xml
<CustomField>
    <fullName>Latest_Terms__c</fullName>
    <label>Latest Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>