force-app/main/default/objects/Commercial_Terms_Update__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Commercial Terms Update</relationshipLabel>
    <relationshipName>Commercial_Terms_Update</relationshipName>
    <type>Lookup</type>
</CustomField>