force-app/main/default/objects/Commercial_Terms_Update__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Update Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>